wedding-fe/src/styles.scss
/* You can add global styles to this file, and also import other style files */

/* html resets */
html,
body {
  height: 100%;
  margin: 0;
}

body {
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.transparent {
  background: rgba(0,0,0,0);
}

.dark-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.2);
}

mat-toolbar {
  padding: 8px 16px !important;
  position: fixed;
}

mat-sidenav-container {
  height: unset !important;
  min-height: unset !important;
  flex: 1 1 auto;
}

